--- a/callforpaper.html
+++ b/callforpaper.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>SCEECS'25-Call For Paper</title>
+    <title>SCEECS'26-Call For Paper</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
 
@@ -441,7 +441,7 @@
             <div class="auto-container">
                 <!-- Sec Title -->
                 <div class="sec-title centered">
-                    <div class="title">SCEECS'25 Call For Paper</div>
+                    <div class="title">SCEECS'26 Call For Paper</div>
                     <h2>How it Works</h2>
                     <div class="separator"></div>
                 </div>
@@ -469,7 +469,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info makeDotResponsive">
-                                       SUBMISSIONS OPEN<span class="time">15 Nov 2025</span><span class="dott submissionDot"></span>
+                                       SUBMISSIONS OPEN<span class="time">1 Sep 2025</span><span class="dott submissionDot"></span>
                                     </div>
                                     <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
                                     <span ><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
@@ -502,7 +502,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
-                                        Acceptance Notification<span class="time">30 Nov 2024</span><span class="dott"></span>
+                                        Acceptance Notification<span class="time">18 Dec 2025</span><span class="dott"></span>
                                     </div>
                                     <h3><a class="bold">Accepted papers will be notified through email.</a></h3>
                                 </div>
@@ -518,7 +518,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info specialBoxCameraReady">
-                                        Camera Ready Submissions<span class="time">15 Dec 2024</span><span class="dott" ></span>
+                                        Camera Ready Submissions<span class="time">25 Dec 2025</span><span class="dott" ></span>
                                     </div>
                                     <h3><a class="bold">Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                                 </div>
@@ -534,7 +534,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info paperPresentationBox"  >
-                                        Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott acceptanceDot"></span>
+                                        Paper Presentation<span class="time">31 Jan-1 Feb 2026</span><span class="dott acceptanceDot"></span>
                                     </div>
                                     <h3><a class="bold">Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                                 </div>
@@ -553,7 +553,7 @@
                                         PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                                     </div>
                                     <h3>
-                                        <a class="bold">Accepted papers will be published in the SCEECS 2025
+                                        <a class="bold">Accepted papers will be published in the SCEECS 2026
                                             Conference Proceedings and submitted to IEEE Xplore.</a>
                                     </h3>
                                 </div>
@@ -563,9 +563,11 @@
                 </div>
 
                 <div class="btn-box text-center">
-                    <a href="https://journals.ieeeauthorcenter.ieee.org/submit-your-article-for-peer-review/the-ieee-article-submission-process/"
+                    <a href="#"
                         class="theme-btn btn-style-one">get More Details</a>
                 </div>
+                                    <!--prev link: https://journals.ieeeauthorcenter.ieee.org/submit-your-article-for-peer-review/the-ieee-article-submission-process/ -->
+
             </div>
             <div class="side-img">
                 <img src="images/resource/id-card.png" alt="" />
@@ -678,12 +680,12 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
 
                     <div class="title-box">
                         <div class="title">A flagship conference by IEEE-MSB</div>
-                        <h2>SCEECS 2025</h2>
+                        <h2>SCEECS 2026</h2>
                     </div>
 
                     <div class="newsletter-form">
                         <div class="form-group">
-                            <a href="docs/Call_for_papers_Final[11}123-01.png" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
+                          <!--  <a href="docs/Call_for_papers_Final[11}123-01.png" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
                         </div>
                     </div>
                 </div>
@@ -753,7 +755,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                     <div class="copyright">
                         <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
                         <a href="http://www.manit.ac.in/">MANIT</a> |
-                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2025.
+                        <a href="https://www.ieee.org/">IEEE.ORG </a><br /> Copyright &copy; sceecs.ieeenitb.com 2026.
                         All rights reserved.
                     </div>
                 </div>
