--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <title>IEEE SCEECS 2025</title>
-  <meta name="description" content="IEEE SCEECS 2025 : 10th IEEE International Students' Conference is a flagship conference of IEEE-MSB
-        on Electrical, Electronics and Computer Sciences. 24th – 25th February 24, Bhopal, India" />
+  <title>IEEE SCEECS 2026</title>
+  <meta name="description" content="IEEE SCEECS 2026 : 11th IEEE International Students' Conference is a flagship conference of IEEE-MSB
+        on Electrical, Electronics and Computer Sciences. 31st January – 1st February 26, Bhopal, India" />
   <!-- Stylesheets -->
   <link href="css/bootstrap.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
@@ -437,7 +437,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                <a href='#check'><span class="theme-btn btn-style-three ">Check Scheduling</span></a>
+                <!-- <a href='#check'><span class="theme-btn btn-style-three">Check Scheduling</span></a> -->
               </div>
             </div>
           </div>
@@ -493,7 +493,7 @@
         <div class="title-box centered">
           <!-- Sec Title -->
           <div class="sec-title centered">
-            <div class="title">Welcome to SCEECS'25</div>
+            <div class="title">Welcome to SCEECS'26</div>
             <h2>About SCEECS</h2>
             <div class="big-title">conference</div>
             <div class="separator"></div>
@@ -501,7 +501,7 @@
           <div class="text">
             SCEECS produces bright young minds that keep the scintillating
             flame glimmering by instilling the importance of research. SCEECS,
-            a biennial event that lures young trailblazers from across the
+            a yearly event that lures young trailblazers from across the
             nation and provides them with an opportunity and a platform to
             showcase their brilliance, through a merge of technical workshops,
             conferences, and guest lectures by prominent personalities. The
@@ -610,7 +610,7 @@
           <div class="content-box">
             <!-- Sec Title -->
             <div class="sec-title light">
-              <div class="title">Welcome to SCEECS'25</div>
+              <div class="title">Welcome to SCEECS'26</div>
               <h2>Guest Lectures</h2>
               <div class="separator"></div>
             </div>
@@ -709,7 +709,7 @@
       <div class="auto-container">
         <!-- Sec Title -->
         <div class="sec-title centered">
-          <div class="title">Welcome to SCEECS'25</div>
+          <div class="title">Welcome to SCEECS'26</div>
           <h2>Guest Speakers</h2>
           <div class="separator"></div>
         </div>
@@ -865,7 +865,7 @@
         <div class="sec-title">
           <div class="clearfix row" style="justify-content: center;">
             <div class="pull-left">
-              <div class="title">Welcome to SCEECS'25</div>
+              <div class="title">Welcome to SCEECS'26</div>
               <h2>Workshops</h2>
               <div class="separator"></div>
             </div>
@@ -931,7 +931,7 @@
                   <!-- Sec Title -->
                  
                   <div class="sec-title light centered">
-                      <div class="title">SCEECS'25</div>
+                      <div class="title">SCEECS'26</div>
                       <h2 style="color: black">Tracks and Topics</h2>
                       <div class="separator"></div>
                       <div class="title" style="margin-top: 20px; font-size: 20px; ">ORIGINAL AND UNPUBLISHED RESEARCH
@@ -1176,7 +1176,7 @@
       <div class="auto-container">
           <!-- Sec Title -->
           <div class="sec-title centered">
-              <div class="title">SCEECS'25 Call For Paper</div>
+              <div class="title">SCEECS'26 Call For Paper</div>
               <h2>How it Works</h2>
               <div class="separator"></div>
           </div>
@@ -1205,10 +1205,11 @@
                               <!-- Program Info -->
 
                               <div class="program-info makeDotResponsive">
-                                 SUBMISSIONS OPEN<span class="time">15 Nov 2024</span><span class="dott submissionDot"></span>
+                                 SUBMISSIONS OPEN<span class="time">1 Sep 2025</span><span class="dott submissionDot"></span>
                               </div>
                               <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
-                              <span><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
+                              <span><a href="#" target="_blank">here</a></span>
+                              <!--prev link: https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025-->
                           </div>
                       </div>
                   </div>
@@ -1238,7 +1239,7 @@
                               <!-- Program Info -->
                               <!-- its media queries is on the top of the page -->
                               <div class="program-info specialBox"  >
-                                  Acceptance Notification<span class="time">30 Nov 2024</span><span class="dott"></span>
+                                  Acceptance Notification<span class="time">18 Dec 2025</span><span class="dott"></span>
                               </div>
                               <h3><a class="bold">Accepted papers will be notified through email.</a></h3>
                           </div>
@@ -1254,7 +1255,7 @@
                               <!-- Program Info -->
                               <!-- added its media query in top of the file -->
                               <div class="program-info specialBoxCameraReady">
-                                  Camera Ready Submissions<span class="time">15 Dec 2024</span><span class="dott" ></span>
+                                  Camera Ready Submissions<span class="time">25 Dec 2025</span><span class="dott" ></span>
                               </div>
                               <h3><a class="bold">Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                           </div>
@@ -1270,7 +1271,7 @@
                               <!-- Program Info -->
                               <!-- its media queries is on the top of the page -->
                               <div class="program-info paperPresentationBox"  >
-                                  Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott acceptanceDot"></span>
+                                  Paper Presentation<span class="time">31 Jan -1 Feb 2026</span><span class="dott acceptanceDot"></span>
                               </div>
                               <h3><a class="bold">Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                           </div>
@@ -1289,7 +1290,7 @@
                                   PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                               </div>
                               <h3>
-                                  <a class="bold">Accepted papers will be published in the SCEECS 2025
+                                  <a class="bold">Accepted papers will be published in the SCEECS 2026
                                       Conference Proceedings and submitted to IEEE Xplore.</a>
                               </h3>
                           </div>
@@ -1310,14 +1311,14 @@
 
     <section id="check" class="news-section">
       <div class="auto-container">
-        <div class="sec-title centered">
-          <div class="title">SCEECS Conference 2025</div>
+        <!-- <div class="sec-title centered">
+          <div class="title">SCEECS Conference 2026</div>
           <h2>Check your Schedule</h2>
           <div class="separator"></div>
 
-        </div>
+        </div> -->
 
-       <table class="table scrollSec"> 
+       <!-- <table class="table scrollSec"> 
           <thead>
             <tr>
               <th scope="col">Mode</th>
@@ -1340,7 +1341,7 @@
             </tr>
             
           </tbody>
-        </table>
+        </table> -->
         <!-- <div class="sec-title centered"> -->
         <!--   <h2 style="font-size: 2vw;">Conference Virtual Session links</h2> -->
         <!--    -->
@@ -1371,7 +1372,7 @@
         <!-- Sec Title -->
 
         <div class="sec-title centered">
-          <div class="title">Welcome to SCEECS 2025</div>
+          <div class="title">Welcome to SCEECS 2026</div>
           <h2>Our Sponsors</h2>
           <div class="separator"></div>
         </div>
@@ -1437,7 +1438,7 @@
       <div class="auto-container">
         <!-- Sec Title -->
         <div class="sec-title centered">
-          <div class="title">Welcome to SCEECS'25</div>
+          <div class="title">Welcome to SCEECS'26</div>
           <h2>Event Schedule</h2>
           <div class="separator"></div>
         </div>
@@ -1449,10 +1450,10 @@
             <!--Tab Btns-->
             <ul class="tab-btns tab-buttons clearfix">
               <li data-tab="#day-one" class="tab-btn active-btn">
-                Day 1 <span>18th January</span>
+                Day 1 <span>31st January</span>
               </li>
               <li data-tab="#day-two" class="tab-btn">
-                Day 2 <span>19th January</span>
+                Day 2 <span>1st February</span>
               </li>
             </ul>
 
@@ -1496,7 +1497,7 @@
                             <h2>
                               INAUGRATION CEREMONY
                             </h2>
-                            <div class="name">Inauguration of SCEECS'25 and welcome address.</div>
+                            <div class="name">Inauguration of SCEECS'26 and welcome address.</div>
                             <div class="text font-weight-bold">TIME: WILL BE INFORMED</div>
                             <div class="text font-weight-bold">VENUE: WILL BE INFORMED</div>
                           </div>
@@ -2318,7 +2319,7 @@
           <div class="content-box">
             <!-- Sec Title -->
             <div class="sec-title light">
-              <div class="title">Welcome to SCEECS'25</div>
+              <div class="title">Welcome to SCEECS'26</div>
               <h2>Be A Campus Ambassador</h2>
               <div class="separator"></div>
             </div>
@@ -2367,12 +2368,13 @@
 
           <div class="title-box">
             <div class="title">A flagship conference by IEEE-MSB</div>
-            <h2>SCEECS 2025</h2>
+            <h2>SCEECS 2026</h2>
           </div>
 
           <div class="newsletter-form">
             <div class="form-group">
-               <a href="docs/Call_for_papers_Final[11}123-01.png" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
+               <a href="#" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
+               <!-- prev link: docs/Call_for_papers_Final[11}123-01.png -->
             </div>
           </div>
         </div>
@@ -2436,7 +2438,7 @@
             <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
             <a href="http://www.manit.ac.in/">MANIT</a> |
             <a href="https://www.ieee.org/">IEEE.ORG </a><br />
-            Copyright &copy; sceecs.ieeenitb.com 2025. All rights reserved.
+            Copyright &copy; sceecs.ieeenitb.com 2026. All rights reserved.
           </div>
         </div>
       </div>
@@ -2455,7 +2457,7 @@
                 <i class="ri-close-line"></i>
             </span>
             <div id="boxL">
-                <p id="title">SCEECS 2025</p>
+                <p id="title">SCEECS 2026</p>
                 <!-- <p class="imagebox">
                   <img src="./codeHelp.png" alt="">
                   <img src="./cybrom.png" alt="">
