Updated sponsors and SCEECS logo

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <div class="clearfix">
             <div class="pull-left logo-box">
               <div class="logo">
-                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
+                <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
               </div>
 
               <!--Mobile Navigation Toggler For Mobile-->
@@ -361,7 +361,7 @@
         <div class="auto-container clearfix">
           <!--Logo-->
           <div class="logo pull-left">
-            <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
+            <a href="index.html" class="img-responsive"><img src="images/logoWhite2026.png" alt="logo" title="" style="width: 80px; height: 56px;" /></a>
           </div>
 
           <!--Right Col-->
@@ -394,7 +394,7 @@
         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
         <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
           <div class="nav-logo">
-            <a href="index.html"><img src="images/logo2026.png" alt="" title="" /></a>
+            <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" /></a>
           </div>
 
           <ul class="navigation clearfix">
@@ -1413,10 +1413,13 @@
         </div>
 
         <div class="sponsors-list">
-          <img style="height: 100px;"  src="images/clients/talent_battle_logo (1).png" alt="" />
-          <img src="images/clients/interview_cake.png" alt="" />
-          <img src="images/clients/iete.png" alt="" />
-          <img src="images/clients/guvi-logo.png" alt="" />
+          <img style="height: 80px;"  src="sponsors/codingNinjas.png" alt="" />
+          <img style="height: 150px;" src="sponsors/coding-thinker-logo.png" alt="" />
+          <img style="height: 200px;" src="sponsors/balsamiq2.png" alt="" />
+          <img style="height: 200px;" src="sponsors/ibuddy2.png" alt="" />
+          <img src="sponsors/EDtimes.png" alt="" />
+          <img src="sponsors/RagaAI.png" alt="" />
+          <img src="sponsors/hitbullseye-logo.png" alt="" />
           <img src="images/clients/1.png" alt="" />
           <img src="images/clients/2.png" alt="" />
           <img src="images/clients/3.png" alt="" />
@@ -2139,7 +2142,7 @@
       <div class="auto-container">
         <!-- Sec Title -->
         <div class="sec-title centered">
-          <div class="title">Welcome to SCEECS'25</div>
+          <div class="title">Welcome to SCEECS'26</div>
           <h2>Precious remarks by Past Speakers</h2>
           <div class="separator"></div>
         </div>
@@ -2390,7 +2393,7 @@
           <div class="logo">
             <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a>
             &nbsp;
-            <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
+            <a href="index.html"><img src="images/logoWhite2026.png" alt="" style="width: 80px; height: 57px;" /></a>
           </div>
           <div class="text">
             IEEE is the world’s largest technical professional organization.
