--- a/workshop.html
+++ b/workshop.html
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
+                                <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;"/></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -680,7 +680,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
