--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <div class="logo">
                   <a href="index.html"
                     ><img
-                      src="images/logo2026.png"
+                      src="images/logoWhite2026.png"
                       alt=""
                       title=""
                       id="mainlogo"
@@ -98,7 +98,7 @@
             <div class="logo pull-left">
               <a href="index.html" class="img-responsive"
                 ><img
-                  src="images/logo2026.png"
+                  src="images/logoWhite2026.png"
                   alt="logo"
                   title=""
                   style="width: 80px; height: 56px"
@@ -136,7 +136,7 @@
           <nav class="menu-box" style="background-color: rgb(4, 4, 36)">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="images/logo2026.png" alt="" title=""
+                ><img src="images/logoWhite2026.png" alt="" title=""
               /></a>
             </div>
 
@@ -915,7 +915,7 @@
           <!-- Sec Title -->
 
           <div class="sec-title centered">
-            <div class="title">Welcome to SCEECS 2025</div>
+            <div class="title">Welcome to SCEECS 2026</div>
             <h2>Technical Sponsors</h2>
             <div class="separator"></div>
           </div>
@@ -1017,7 +1017,7 @@
               &nbsp;
               <a href="index.html"
                 ><img
-                  src="images/logo2026.png"
+                  src="images/logoWhite2026.png"
                   alt=""
                   style="width: 80px; height: 57px"
               /></a>
@@ -1085,7 +1085,7 @@
               <a href="https://ieeenitb.com/">IEEENITB.COM</a> |
               <a href="http://www.manit.ac.in/">MANIT</a> |
               <a href="https://www.ieee.org/">IEEE.ORG </a><br />
-              Copyright &copy; sceecs.ieeenitb.com 2025. All rights reserved.
+              Copyright &copy; sceecs.ieeenitb.com 2026. All rights reserved.
             </div>
           </div>
         </div>
