--- a/callforpaper.html
+++ b/callforpaper.html
@@ -75,7 +75,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
+                                <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -139,7 +139,7 @@
                 <div class="auto-container clearfix">
                     <!--Logo-->
                     <div class="logo pull-left">
-                        <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo"
+                        <a href="index.html" class="img-responsive"><img src="images/logoWhite2026.png" alt="logo"
                                 title="" style="width: 80px; height: 56px;" /></a>
                     </div>
 
@@ -170,7 +170,7 @@
 
                 <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
-                        <a href="index.html"><img src="images/logo2026.png" alt="" title="" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" /></a>
                     </div>
 
                     <ul class="navigation clearfix"></ul>
@@ -199,7 +199,7 @@
                 <!-- Sec Title -->
                
                 <div class="sec-title light centered">
-                    <div class="title">SCEECS'25</div>
+                    <div class="title">SCEECS'26</div>
                     <h2 style="color: black">Tracks and Topics</h2>
                     <div class="separator"></div>
                     <div class="title" style="margin-top: 20px; font-size: 20px; ">ORIGINAL AND UNPUBLISHED RESEARCH
@@ -700,7 +700,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
