--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                     <div class="clearfix">
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
+                                <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" id="mainlogo" style="width: 90px; height: 59px;" /></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -102,7 +102,7 @@
                 <div class="auto-container clearfix">
                     <!--Logo-->
                     <div class="logo pull-left">
-                        <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo"
+                        <a href="index.html" class="img-responsive"><img src="images/logoWhite2026.png" alt="logo"
                                 title="" style="width: 80px; height: 56px;"  /></a>
                     </div>
 
@@ -133,7 +133,7 @@
 
                 <nav class="menu-box" style="background-color: rgb(4, 4, 36);">
                     <div class="nav-logo">
-                        <a href="index.html"><img src="images/logo2026.png" alt="" title="" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" /></a>
                     </div>
 
                     <ul class="navigation clearfix"></ul>
@@ -174,7 +174,7 @@
                 <!-- Sec Title -->
                 <div class="sec-title centered">
                     <div class="title">Get In Touch With Us</div>
-                    <h2>IEEE SCEECS 2025</h2>
+                    <h2>IEEE SCEECS 2026</h2>
                     <div class="separator"></div>
                 </div>
 
@@ -365,7 +365,7 @@
                     <!-- Footer Logo -->
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a> &nbsp;
-                        <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">
                         IEEE is the world’s largest technical professional organization. It is dedicated to the
