--- a/guidelines2.html
+++ b/guidelines2.html
@@ -57,7 +57,7 @@
 
                         <div class="pull-left logo-box">
                             <div class="logo">
-                                <a href="index.html"><img src="images/logo2026.png" alt="" title="" id="mainlogo" style="width: 80px; height: 57px;" ></a>
+                                <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" id="mainlogo" style="width: 80px; height: 57px;" ></a>
                             </div>
 
                             <!--Mobile Navigation Toggler For Mobile-->
@@ -120,7 +120,7 @@
                 <div class="auto-container clearfix">
                     <!--Logo-->
                     <div class="logo pull-left">
-                        <a href="index.html" class="img-responsive"><img src="images/logo2026.png" alt="logo" title="" style="width: 80px; height: 57px;" ></a>
+                        <a href="index.html" class="img-responsive"><img src="images/logoWhite2026.png" alt="logo" title="" style="width: 80px; height: 57px;" ></a>
                     </div>
 
                     <!--Right Col-->
@@ -150,7 +150,7 @@
                 <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
                 <nav class="menu-box">
                     <div class="nav-logo">
-                        <a href="index.html"><img src="images/logo2026.png" alt="" title="" style="width: 80px; height: 57px;" ></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" title="" style="width: 80px; height: 57px;" ></a>
                     </div>
 
                     <ul class="navigation clearfix">
@@ -417,7 +417,7 @@
                     <div class="logo">
                         <a href="index.html"><img src="images/ieee-logo-white.png" alt="" /></a>
                         &nbsp;
-                        <a href="index.html"><img src="images/logo2026.png" alt="" style="width: 80px; height: 57px;" /></a>
+                        <a href="index.html"><img src="images/logoWhite2026.png" alt="" style="width: 80px; height: 57px;" /></a>
                     </div>
                     <div class="text">IEEE is the world’s largest technical professional organization. It is dedicated to the advancement of technology for the betterment of humanity.
                     </div>
