--- a/callforpaper.html
+++ b/callforpaper.html
@@ -467,13 +467,17 @@
                         <div class="inner-block clearfix">
                             <div class="content col-lg-6 col-md-12 col-sm-12">
                                 <div class="content-inner">
-                                    <!-- Program Info -->
-                                    <div class="program-info makeDotResponsive">
-                                       SUBMISSIONS OPEN<span class="time">1 Sep 2025</span><span class="dott submissionDot"></span>
-                                    </div>
-                                    <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
-                                    <span ><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
-                                </div>
+                              <!-- Program Info -->
+
+                              <div class="program-info makeDotResponsive">
+                                 SUBMISSIONS OPEN<span class="time">1 Sep 2025</span><span class="dott submissionDot"></span>
+                              </div>
+                              <!-- <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
+                              <span><a href="#" target="_blank">here</a></span> -->
+                              <!--prev link: https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025-->
+                              <h3><a class="bold">Acknowledgement</a></h3>
+                              <p>The Microsoft CMT service was used for managing the peer-reviewing process for this conference. This service was provided for free by Microsoft and they bore all expenses, including costs for Azure cloud services as well as for software development and support.</p>
+                          </div>
                             </div>
                         </div>
                     </div>
