--- a/guidelines.html
+++ b/guidelines.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <title>SCEECS'26 - Guidelines</title>
-    <meta name="description" content="IEEE SCEECS 20222 : 6th IEEE International Students' Conference is a flagship conference of IEEE-MSB
-        on Electrical, Electronics and Computer Sciences. 19th – 20th February 22, Bhopal, India">
+    <meta name="description" content="IEEE SCEECS 2026 : 11th IEEE International Students' Conference is a flagship conference of IEEE-MSB
+        on Electrical, Electronics and Computer Sciences. 31st January – 1st February 26, Bhopal, India">
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
