Recap Replaced with new

--- a/index.html
+++ b/index.html
@@ -520,9 +520,9 @@
           <figure class="video-image">
             <img src="images/gl/lakshya_kumar.jpeg" style="width:100%;height:500px;object-fit:contain;" alt="" />
             <div class="content">
-              <a href="images/resource/sceecs trailer.mp4" class="lightbox-image overlay-box"><span
+              <a href="images/resource/recap-2025.mp4" class="lightbox-image overlay-box"><span
                   class="flaticon-play-button"><i class="ripple"></i></span></a>
-              <h3>Sceecs'24 Recap</h3>
+              <h3>Sceecs'25 Recap</h3>
             </div>
           </figure>
         </div>
