update: Copyright message updated on Call for papers

--- a/index.html
+++ b/index.html
@@ -2377,8 +2377,7 @@
 
           <div class="newsletter-form">
             <div class="form-group">
-               <a href="#" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
-               <!-- prev link: docs/Call_for_papers_Final[11}123-01.png -->
+               <a href="docs/CALL FOR PAPER 1.png" target="_blank" class="theme-btn btn-style-one">Download Brochure</a>
             </div>
           </div>
         </div>
