--- a/callforpaper.html
+++ b/callforpaper.html
@@ -592,15 +592,9 @@
                             <div class="separator"></div>
 
                             <p class="price-list" id="cfpp">
-                                For papers in which all authors are employed by the US government, the copyright notice is: U.S. Government work not
-protected by U.S. copyright
-For papers in which all authors are employed by a Crown government (UK, Canada, and Australia), the copyright notice is:
-979-8-3503-4846-0/24/$31.00 ©2024 Crown
-For papers in which all authors are employed by the European Union, the copyright notice is: 979-8-3503-4846-0/24/$31.00
-©2024 European Union
-For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024 IEEE
+                                For papers in which all authors are employed by the US government, the copyright notice is: U.S. Government work not protected by U.S. copyright For papers in which all authors are employed by a Crown government (UK, Canada, and Australia), the copyright notice is: 979-8-3315-7116-0/26/$31.00 ©2026 Crown For papers in which all authors are employed by the European Union, the copyright notice is: 979-8-3315-7116-0/26/$31.00 ©2026 European Union For all other papers the copyright notice is: 979-8-3315-7116-0/26/$31.00 ©2026 IEEE
                             </p>
-                            <a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025"
+                            <a href="https://cmt3.research.microsoft.com/SCEECS2026/"
                                 class="theme-btn btn-style-one">Submit Via Microsoft CMT</a>
                         </div>
                     </div>
@@ -646,7 +640,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                                     through Microsoft CMT.
                                 </span>
                             </p>
-                            <a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank"
+                            <a href="https://cmt3.research.microsoft.com/SCEECS2026/" target="_blank"
                                 class="theme-btn btn-style-two" id="ppbtn"></span>Submit Via
                                 Microsoft CMT</a>
                         </div>
