added conference details btn

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
+                    <a href="/docs/CALL FOR PAPER 1.png" target="_blank"><span class="theme-btn btn-style-two">Conference details</span></a>
                 <!-- <a href='#check'><span class="theme-btn btn-style-three">Check Scheduling</span></a> -->
               </div>
             </div>
@@ -2485,7 +2486,7 @@
                   
                 </p>
                 <p id="mainHeading" style="font-size:25px;color:#ff006a">Deadline Extended</p>
-                <p id="mainHeading" style="color:#ff006a">Till 8th October 2025!</p>
+                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025!</p>
 
                 <p id="deadlineDisc">Submit your papers on Microsoft CMT</p> 
                 <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
