--- a/index.html
+++ b/index.html
@@ -1394,9 +1394,9 @@
       </div>
     </section>
 
-    <!-- don't forget to remove inilne css from line 1008 -->
+    <!-- do not forget to remove inilne css from line 1008 -->
 
-    <!-- Sponsors Section -->
+    <!-- Sponsors---Section -->
     <section class="sponsors-section" style="background-image: url(images/background/3.png)">
       <!-- Side Icons -->
       <div class="side-icons paroller" data-paroller-factor="-0.40" data-paroller-factor-lg="-0.150"
