--- a/index.html
+++ b/index.html
@@ -2584,16 +2584,16 @@
   <!-- Overlay End -->
 
   <!-- Pop UPs -->
-  <div id="popUp">
+  <!-- <div id="popUp">
     <span id="toggle">
       <i class="ri-close-line"></i>
     </span>
     <div id="boxL">
-      <p id="title">SCEECS 2026</p>
+      <p id="title">SCEECS 2026</p> -->
       <!-- <p class="imagebox">
 
         <!-- Overlay Page -->
-        <div class="overlay" id="overlay"></div>
+        <!-- <div class="overlay" id="overlay"></div> -->
         <!-- Overlay End -->
     
         <!-- Pop UPs -->
