--- a/index.html
+++ b/index.html
@@ -2633,7 +2633,7 @@
                   
                 </p>
                 <p id="mainHeading" style="font-size:25px;color:#ff006a">Deadline Extended</p>
-                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025!</p>
+                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025</p>
 
                 <p id="deadlineDisc">Submit your papers on Microsoft CMT</p> 
                 <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
