Submission Closed Model

--- a/index.html
+++ b/index.html
@@ -2604,14 +2604,11 @@
                   <img src="logoWhite2026.png" alt="SCEECS-2026">
                   
                 </p>
-                <p id="mainHeading" style="font-size:25px;color:#ff006a">Deadline Extended</p>
-                <p id="mainHeading" style="color:#ff006a">Till 12th October 2025!</p>
+                <p id="mainHeading" style="font-size:25px;color:#ff006a">Submission Closed</p>
+                <p id="mainHeading" style="color:#ff006a">Thank you for your interest!</p>
 
-                <p id="deadlineDisc">Submit your papers on Microsoft CMT</p> 
+                <p id="deadlineDisc">Paper submissions are no longer being accepted</p> 
                 <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
-                <div id="btn">
-                    <a href="https://cmt3.research.microsoft.com/SCEECS2026/" target="_blank"><button style="cursor: pointer;">Submit here</button></a>
-                </div>
             </div>
         </div>
         <!-- Pop UPs  End-->
