--- a/index.html
+++ b/index.html
@@ -2594,7 +2594,7 @@
             <!-- </div>
         </div> -->
 
-        <div id="popUp">
+        <!--<div id="popUp">
             <span id="toggle">
                 <i class="ri-close-line"></i>
             </span>
@@ -2608,10 +2608,26 @@
                 <p id="mainHeading" style="color:#ff006a">Till 16th October 2025!</p>
 
                 <p id="deadlineDisc">Submit your papers on Microsoft CMT</p> 
-                <!-- <p id="disc">SCEECS 2026 is Here!</p> -->
+                <p id="disc">SCEECS 2026 is Here!</p> 
                 <div id="btn">
                     <a href="https://cmt3.research.microsoft.com/SCEECS2026/" target="_blank"><button style="cursor: pointer;">Submit here</button></a>
                 </div>
+            </div>
+        </div>-->
+
+        <div id="popUp">
+            <span id="toggle">
+                <i class="ri-close-line"></i>
+            </span>
+            <div id="boxL">
+                
+                <p class="imagebox">
+                  <img src="logoWhite2026.png" alt="SCEECS-2026">
+                  
+                </p>
+                <p id="mainHeading" style="font-size:25px;color:#ff006a">Submissions are closed</p>
+                <p id="mainHeading" style="color:#fff">Thanks for your interest</p>
+
             </div>
         </div>
         <!-- Pop UPs  End-->
