Change in popup

--- a/index.html
+++ b/index.html
@@ -2625,9 +2625,7 @@
                   <img src="logoWhite2026.png" alt="SCEECS-2026">
                   
                 </p>
-                <p id="mainHeading" style="font-size:25px;color:#ff006a">Submissions are closed</p>
-                <p id="mainHeading" style="color:#fff">Thanks for your interest</p>
-
+                <p id="mainHeading" style="font-size:22px;color:#ff006a;margin-top: 3rem;">Submission closed</p>
             </div>
         </div>
         <!-- Pop UPs  End-->
