--- a/about.html
+++ b/about.html
@@ -378,6 +378,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Dr. Dheeraj Kumar Agarwal</a></h3>
                   <div class="designation">Organizing Chair</div>
+                  <div class="#">Membership No #92205335</div>
                 </div>
               </div>
             </div>
@@ -393,6 +394,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Dr. Atul Kumar</a></h3>
                   <div class="designation">Publication Chair</div>
+                  <div class="#">Membership No #94817808</div>
                 </div>
               </div>
             </div>
@@ -425,6 +427,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Dr. Priyanka Paliwal</a></h3>
                   <div class="designation">Program Chair</div>
+                  <div class="#">Membership No #92215569</div>
                 </div>
               </div>
             </div>
@@ -442,6 +445,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Mr. Vedant Jaiswal</a></h3>
                   <div class="designation">Organizing Co-Chair</div>
+                  <div class="#">Membership No #101392018</div>
                 </div>
               </div>
             </div>
@@ -457,6 +461,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Ms. Yashika Lawani </a></h3>
                   <div class="designation">Publication Co-Chair</div>
+                  <div class="#">Membership No #101217691</div>
                 </div>
               </div>
             </div>
@@ -489,6 +494,7 @@
                 <div class="lower-content">
                   <h3><a href="#">Mr. Vivek Kumar</a></h3>
                   <div class="designation">Finance Co-Chair</div>
+                  <div class="#">Membership No #101295401</div>
                 </div>
               </div>
             </div>
